@@ -11,14 +11,18 @@ AUX git-daemon.xinetd 260 RMD160 9c1abde72ac5064e1fc86afd29c2a74079db91a4 SHA1 4
 DIST git-1.5.3.7.tar.bz2 1361540 RMD160 74bfccd50c895e22d10b9e25f481f00a20617077 SHA1 95c3b64d34f28db8122e30f28dc5758ebbc8469b SHA256 f4f03dd1a5255019c2d771a04b8a647509b4c6cf51728acc50e8f26d99e62fec
 DIST git-1.5.3.8.tar.bz2 1363259 RMD160 8e35e67cc94152c681849e14cb4aec86f1b316cf SHA1 acca91988e674c5976e15a290be65f2775296162 SHA256 f98c6b900c9f3b87a1fbbe0c5f466e9d981cb9f1d193066b6d371df4b8066b77
 DIST git-1.5.4.rc2.tar.bz2 1550103 RMD160 96b857d72d10287366a634a63294caa336850c6d SHA1 7ccae071e31aa43a0ae3ed562664f2ef69312d93 SHA256 48f86c8be2f5315b7a178f74a0d01a120be5119eeeee465fd7ef60c1740d6014
+DIST git-1.5.4.rc3.tar.bz2 1565463 RMD160 b77c052cd08496c771325e5235972e0eb476ad49 SHA1 c72798b860aca4b07411dd6fbeb1d0a3ca16868a SHA256 15a834fd7818b71600e2dd3855a9e9924198c699daaf6db4e3e6ab514f7ae0c4
 DIST git-htmldocs-1.5.3.7.tar.bz2 549391 RMD160 18d01c803fd529ac897ae249ce4e05193ee9850a SHA1 926fb29604d69ce45ecf7b57d1b8feeb6c356f9b SHA256 e28c7e149e0f5adb66093af287dffe0caef83926ae08c6cdb6a2d35bc9148d04
 DIST git-htmldocs-1.5.3.8.tar.bz2 549444 RMD160 f4df777094158beea16bd2f0783ef846198e2c36 SHA1 d822887c45437daebf08c7cfe6e93a4ce5136fd3 SHA256 200a7231d6a594aeb5cb0c0e1cf25513c086f53b84170c7c5376199b2659b874
 DIST git-htmldocs-1.5.4.rc2.tar.bz2 603097 RMD160 b530069db8852d78a373c5eb1874ac189f624502 SHA1 ff76bc79172ef3bc2d4ade7f16389ca132f0e36c SHA256 03516a441af5f0881a1064e44acf3638a083a23c650b13ba24036facd5b8b712
+DIST git-htmldocs-1.5.4.rc3.tar.bz2 604712 RMD160 37f12f0972538088e050bd5d115e7fedcc5e65a1 SHA1 96014c1b972442ef4f9f8887014c084595f0ba86 SHA256 e3c1c62e2c27d0c25743f87e07ae8c022539e637323c666d96c5f6df23e37c7d
 DIST git-manpages-1.5.3.7.tar.bz2 147932 RMD160 fd4b45c221cbc63f580a32595c59eb52da1baa2f SHA1 7cc45f156298d0fbd4ead4a9b2096ed2143287b8 SHA256 870e68ef57f4175152b9b8decc721d8cbc9850ed8eda73919fc9e060f3968ffa
 DIST git-manpages-1.5.3.8.tar.bz2 147875 RMD160 c2a15b7a0742f14a70d0bf06d4d14fe9cf2b329b SHA1 15b9ece73c28897affb5da187835d19ff20e9962 SHA256 73a7cc2c0473694d454a6b7cb311ccdeb82f350bc8e652229d361592ea0a482f
 DIST git-manpages-1.5.4.rc2.tar.bz2 154985 RMD160 4c3d8eb5e907a56c6a3f6f8eafc247ab3201bd6e SHA1 42634edd7dbb66b060a10be7e2e51541575216d2 SHA256 6e4bcdb992c710ac2b6b698a68cca2ada050db85979fb31e59015c0718686c39
-EBUILD git-1.5.3.7-r1.ebuild 6797 RMD160 7942d7447bc92935ce8ad025635e669ba6939639 SHA1 b5f74cbf4b92941cef2a03e67b59c34274a1477a SHA256 82bf24b75f62e3e2b2a467eabefcaf42e640d07949dce854377396d2a33007f9
+DIST git-manpages-1.5.4.rc3.tar.bz2 155119 RMD160 f4df340f36e85f9144bc6a18f94692d07ed5c0a5 SHA1 adf52f9466f4cea604b68880d21d652800009377 SHA256 98e020ba2285c03403731548e15e31a08a91684de24a1a5058a97a17078e370c
+EBUILD git-1.5.3.7-r1.ebuild 6801 RMD160 7c1d0f55831a5cae8f196f87eabdc2d130fcb485 SHA1 17af11efcf462563cbab9aecbfe9bf382cd4f44f SHA256 ede376e341b12156924ef5a624395a27e2048e4615defad6641f1f867a089238
 EBUILD git-1.5.3.8.ebuild 6803 RMD160 f54851f7cfe7dba7364a1c70fb1621d042b2a4b4 SHA1 fdc999077906ac6b341f2eeeabb0b73ad55a3f02 SHA256 32ff236d4054f4ce3e4c1212c892d31f322210caa7b42fe2f827a66f6b7a9395
 EBUILD git-1.5.4_rc2.ebuild 6973 RMD160 e2d2b248c2b13be006f4df8920e682c35fe8252e SHA1 070ab31f5163757b7975e3b474234fdff6952326 SHA256 24123087d2e78153bc373cdd3a05b34966a1f8f9a2056b898ee7b32b75a7bd1e
-MISC ChangeLog 36416 RMD160 492c9774e0aaf8483a3d6b31b69417613454ed3c SHA1 08ea68b846b86c2937db4045211948f86037b811 SHA256 4e7a421543080f25e82c3b663955f723f4ed943dfd115edee27904a791ebe04e
+EBUILD git-1.5.4_rc3.ebuild 6975 RMD160 f1b9e640a9b1c5f34c9ad625b842bb0de4ef7b79 SHA1 32b458a7793a2edd2d96534928bb0d4898e780a5 SHA256 16618edb00bb7e55f7d4083de0c313a98ed7300be533d8ed4bc10edaf3618de4
+MISC ChangeLog 36671 RMD160 6e972d5bcfed501ba012fc773d006908a510ad29 SHA1 259848809f0c2d23e8f43126943e2ec3d81b8def SHA256 9812e767de41fe2302438e6a865f43043d648e21fe8030ecb29f2c45b691069b
 MISC metadata.xml 1029 RMD160 f44ab0f6f9566b2cdb37f6cdd094e163c94e7d11 SHA1 88453257ccbedf4166357c262f49b0731cc45448 SHA256 2aa15da3001de8d8182ee9c8289cdefae84652b78ccc4cf35b2394f07edc352f
