@@ -1,6 +1,6 @@
 # Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/git/git-1.5.3.7-r1.ebuild,v 1.11 2008/01/14 20:15:33 dertobi123 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/git/git-1.5.4_rc3.ebuild,v 1.1 2008/01/14 13:54:00 robbat2 Exp $
 
 EAPI="prefix"
 
@@ -33,7 +33,7 @@ DEPEND="
 	webdav? ( dev-libs/expat )
 	emacs?  ( virtual/emacs )"
 RDEPEND="${DEPEND}
-	cgi?	( virtual/perl-CGI )
+	cgi?    ( virtual/perl-CGI )
 	perl?   ( dev-perl/Error )
 	gtk?    ( >=dev-python/pygtk-2.8 )"
 
@@ -122,7 +122,6 @@ src_install() {
 	dodoc README Documentation/{SubmittingPatches,CodingGuidelines}
 	use doc && dodir /usr/share/doc/${PF}/html
 	for d in / /howto/ /technical/ ; do
-		einfo "Doing Documentation${d}"
 		docinto ${d}
 		dodoc Documentation${d}*.txt
 		use doc && dohtml -p ${d} Documentation${d}*.html
@@ -152,9 +151,13 @@ src_install() {
 	newbin contrib/fast-import/import-tars.perl import-tars
 
 	dodir /usr/share/${PN}/contrib
+	# The following are excluded:
+	# p4import - excluded because fast-import has a better one
+	# examples - these are stuff that is not used in Git anymore actually
+	# patches - stuff the Git guys made to go upstream to other places
 	for i in continuous fast-import hg-to-git \
 		hooks remotes2config.sh vim stats \
-		workdir ; do
+		workdir convert-objects ; do
 		cp -rf \
 			"${S}"/contrib/${i} \
 			"${ED}"/usr/share/${PN}/contrib \
@@ -186,16 +189,14 @@ src_test() {
 		MY_MAKEOPTS="${MY_MAKEOPTS} NO_SVN_TESTS=YesPlease"
 	has_version app-arch/unzip || \
 		rm "${S}"/t/t5000-tar-tree.sh
-	# Stupid CVS won't let some people commit as root
-	if has userpriv "${FEATURES}"; then
-		einfo "Enabling CVS tests as we have FEATURES=userpriv"
-	else
+	if ! has userpriv "${FEATURES}"; then
 		ewarn "Skipping CVS tests because CVS does not work as root!"
 		ewarn "You should retest with FEATURES=userpriv!"
 		for i in t9200-git-cvsexportcommit.sh t9600-cvsimport.sh ; do
 			rm "${S}"/t/${i} || die "Failed to remove ${i}"
 		done
 	fi
+	built_with_use dev-util/cvs server || rm "${S}"/t/t9600-cvsimport.sh
 	emake ${MY_MAKEOPTS} DESTDIR="${D}" prefix="${EPREFIX}"/usr test || die "tests failed"
 }
 
@@ -213,13 +214,14 @@ pkg_postinst() {
 	showpkgdeps git-cvsimport ">=dev-util/cvsps-2.1"
 	showpkgdeps git-svnimport "dev-util/subversion(USE=perl)"
 	showpkgdeps git-svn \
+		"USE=perl" \
 		"dev-util/subversion(USE=perl)" \
 		"dev-perl/libwww-perl" \
 		"dev-perl/TermReadKey"
 	showpkgdeps git-quiltimport "dev-util/quilt"
 	showpkgdeps git-cvsserver "dev-perl/DBI" "dev-perl/DBD-SQLite"
 	showpkgdeps git-instaweb \
-		"|| ( www-servers/lighttpd www-servers/apache(SLOT=2) )"
+		"|| ( www-servers/lighttpd www-servers/apache )"
 	showpkgdeps git-send-email "USE=perl"
 	showpkgdeps git-remote "USE=perl"
 	echo
