@@ -1,6 +1,15 @@
 # ChangeLog for dev-util/git
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/git/ChangeLog,v 1.249 2008/01/13 22:02:28 ferdy Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/git/ChangeLog,v 1.251 2008/01/14 20:15:33 dertobi123 Exp $
+
+  14 Jan 2008; Tobias Scherbaum <dertobi123@gentoo.org>
+  git-1.5.3.7-r1.ebuild:
+  ppc. stable
+
+*git-1.5.4_rc3 (14 Jan 2008)
+
+  14 Jan 2008; Robin H. Johnson <robbat2@gentoo.org> +git-1.5.4_rc3.ebuild:
+  Bump the release candidate for more testing.
 
   13 Jan 2008; Fernando J. Pereda <ferdy@gentoo.org>
   +files/git-1.5.3.8-t9101.patch, git-1.5.3.8.ebuild:
